# decoupled-ai

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  check_output.txt  config.toml  install.sh  server_err.txt  server_test.txt  test_config.toml
.cargo/: config.toml
.github/workflows/: release.yml
api-openai/: Cargo.toml
api-openai/src/: lib.rs
brain-pack/: Cargo.toml
brain-pack/src/: downloader.rs  lib.rs  main.rs  safetensors.rs
compute-cpu/: Cargo.toml
compute-cpu/src/: lib.rs
compute-cuda/: Cargo.toml  build.rs
compute-cuda/src/: kernels.cu  lib.rs
compute-metal/: Cargo.toml
compute-metal/src/: kernels.metal  lib.rs
compute-rocm/: Cargo.toml  build.rs
compute-rocm/src/: kernels.hip  lib.rs
config/: config.toml  cuda.toml  default.toml
docs/: API_REFERENCE.md  BUILD.md  SPEC.md  SPECULATIVE_DECODING_PLAN.md  STREAMING.md  index.md  installation.md
docs-engine/: Cargo.toml
docs-engine/src/: lib.rs  main.rs
docs-engine/templates/: api_reference.hbs  build.hbs  changelog.hbs  readme.hbs  spec.hbs
engine-ipc/: Cargo.toml
engine-ipc/src/: lib.rs
engine-ipc/src/speculative/: config.rs  mod.rs  ngram_index.rs  speculator.rs  verifier.rs
frontend-react/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend-react/public/: manifest.json
frontend-react/src/: App.jsx
frontend-react/src/components/: Header.jsx  HealthStatus.jsx  Sidebar.jsx
frontend-react/src/pages/: ChatPage.jsx  DownloadPage.jsx  ModelsPage.jsx  SettingsPage.jsx  SpeculativePage.jsx
frontend-react/src/styles/: globals.css
frontend-ui/: Cargo.toml
frontend-ui/assets/: app.js  chart.min.js  style.css
frontend-ui/src/: lib.rs
mem-posix/: Cargo.toml
mem-posix/src/: lib.rs  linux_impl.rs
mem-windows/: Cargo.toml
mem-windows/src/: lib.rs
models/converted/: test-model.00.brain  test-model.01.brain  test-model.shard.idx  tiny-llama.00.brain  tiny-llama.01.brain  tiny-llama.shard.idx
models/converted-tiny/: tiny-llama.00.brain  tiny-llama.01.brain  tiny-llama.shard.idx
packaging/appimage/: AppImageBuilder.yml  build-appimage.sh
packaging/arch/: PKGBUILD  decoupled-ai.install  decoupled-ai.service  decoupled-ai.tmpfiles
packaging/debian/: decoupled-ai.service  postinst  postrm  preinst  prerm
packaging/fedora/: decoupled-ai.service  decoupled-ai.spec  decoupled-ai.sysusers
packaging/rpm/: decoupled-ai.spec
packaging/universal/: install.sh
packaging/windows/: main.wxs
server-backend/: Cargo.toml
server-backend/src/: gpu_detect.rs  lib.rs  main.rs  updater.rs
server-backend/static/: index.html
server-backend/static/assets/: index-CMVMdUlq.js  index-DL85vaNO.css
stream-cache/: Cargo.toml
stream-cache/src/: lib.rs
tests/: Cargo.toml
tests/src/: integration_tests.rs
weight-handle/: Cargo.toml
weight-handle/src/: lib.rs
~/.cargo/: .crates.toml  .crates2.json
