[package]
name = "api-openai"
version = "0.1.0"
edition = "2021"
description = "OpenAI-compatible API layer for DeCoupled-AI"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures = "0.3"
uuid = { workspace = true }
engine-ipc = { path = "../engine-ipc" }

[lib]
name = "api_openai"
path = "src/lib.rs"