[package]
name = "brain-pack"
version = "0.1.0"
edition = "2021"
description = "Binary container compiler for .brain/.param model files"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
sha2 = { workspace = true }
half = { workspace = true }
memmap2 = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "gzip", "brotli"], default-features = false }
indicatif = "0.17"
flume = "0.11"
zip = "0.6"
tokio = { workspace = true, features = ["rt-multi-thread", "fs", "io-util"] }

[dev-dependencies]
tempfile = "3.10"

[lib]
name = "brain_pack"
path = "src/lib.rs"

[[bin]]
name = "brain-pack"
path = "src/main.rs"