[package]
name = "engine-ipc"
version = "0.1.0"
edition = "2021"
description = "Core engine daemon with IPC for DeCoupled-AI"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
half = { workspace = true }
uuid = { workspace = true }
brain-pack = { path = "../brain-pack" }
stream-cache = { path = "../stream-cache" }
compute-cpu = { path = "../compute-cpu", optional = true }
weight-handle = { workspace = true }
hashbrown = "0.14"
smallvec = "1.10"
rand = "0.8"

[target.'cfg(unix)'.dependencies]
mem-posix = { path = "../mem-posix" }

[target.'cfg(windows)'.dependencies]
mem-windows = { path = "../mem-windows" }

# Platform-specific optional compute deps — only resolvable where the
# toolchain actually exists. Without these cfg gates, cargo still resolves
# the dep graph (even for `optional = true` entries), and on Windows the
# metal/cocoa/core-foundation transitive deps fail to compile.
#
# compute-cuda is gated to Linux/macOS because cudarc 0.16's API requires a
# substantial port from the existing 0.12-era code, and CUDA SDK detection
# is environmental. On CUDA-equipped hosts (typically Linux), enabling the
# `cuda` feature pulls this in.
[target.'cfg(target_os = "linux")'.dependencies]
compute-cuda = { path = "../compute-cuda", optional = true }
compute-rocm = { path = "../compute-rocm", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
compute-metal = { path = "../compute-metal", optional = true }

[features]
default = ["cpu"]
cuda = ["compute-cuda"]
rocm = ["compute-rocm"]
metal = ["compute-metal"]
cpu = ["compute-cpu"]

[lib]
name = "engine_ipc"
path = "src/lib.rs"
