[package]
name = "mem-posix"
version = "0.1.0"
edition = "2021"
description = "Linux memory mapping layer for .brain files"

# Platform-specific: Linux only (requires nix crate with glibc)
[target.'cfg(target_os = "linux")'.dependencies]
anyhow = "1.0"
thiserror = "1.0"
memmap2 = "0.9"
libc = "0.2"
nix = { version = "0.27", features = ["fs", "mman"] }
tracing = "0.1"
brain-pack = { path = "../brain-pack" }