[package]
name = "server-backend"
version = "0.1.0"
edition = "2021"
description = "High-performance web server for DeCoupled-AI with embedded UI and OpenAI API"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
http = { workspace = true }
mime = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
futures-util = "0.3"
mime_guess = "2.0"
engine-ipc = { path = "../engine-ipc" }
api-openai = { path = "../api-openai" }
brain-pack = { path = "../brain-pack" }
flume = "0.11"
async-stream = "0.3"
semver = "1.0"
lazy_static = "1.4"
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

[lib]
name = "server_backend"
path = "src/lib.rs"

[[bin]]
name = "decoupled-ai-server"
path = "src/main.rs"

# Platform-specific packaging configuration (legacy - using universal installer now)
# [package.metadata.packager]