[package]
name = "tests"
version = "0.1.0"
edition = "2021"
description = "End-to-end tests for DeCoupled-AI"

[lib]
name = "tests"
path = "src/integration_tests.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
uuid = { workspace = true }
axum = { workspace = true }
tempfile = "3.0"
half = { workspace = true }
smallvec = { workspace = true }
engine-ipc = { path = "../engine-ipc" }
api-openai = { path = "../api-openai" }
server-backend = { path = "../server-backend" }
brain-pack = { path = "../brain-pack" }
compute-cpu = { path = "../compute-cpu" }

[dev-dependencies]